--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-google-maps/api": "^2.20.6",
     "framer-motion": "^12.4.2",
     "next": "15.1.7",
+    "primereact": "^10.9.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
