--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-spinners": "^0.15.0",
+    "react-table": "^7.8.0",
     "sweetalert2": "^11.17.2",
     "swiper": "^11.2.4",
     "zustand": "^5.0.3"
