--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "@react-google-maps/api": "^2.20.6",
     "framer-motion": "^12.4.2",
-    "next": "15.1.7",
+    "next": "^16.1.1",
     "primereact": "^10.9.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-icons": "^5.4.0",
     "react-spinners": "^0.15.0",
     "react-table": "^7.8.0",
